--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,4 +1,4 @@
 @charset "UTF-8";
 
-body {font-size: 12; font-family: Arial, sans-serif; background-color: rgb(240,240,255); margin: 5%}
-h1 {color: rgb(2,35,98)}
+body {font-size: 100%; font-family: Arial, sans-serif; background-color: rgb(245,245,255); margin: 5%}
+h1 {font-size: 2.5em; color: rgb(2,35,98)}
