--- a/www/css/main.css
+++ b/www/css/main.css
@@ -2,3 +2,4 @@
 
 body {font-size: 100%; font-family: Arial, sans-serif; background-color: rgb(245,245,255); margin: 5%}
 h1 {font-size: 2.5em; color: rgb(2,35,98)}
+h2 {font-size: 1.5em; color: rgb(2,35,98)}
