First Bootstrap implementation!

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
-body {font-size: 100%; font-family: Arial, sans-serif; background-color: rgb(245,245,255); margin: 5%}
-h1 {font-size: 2.5em; color: rgb(2,35,98)}
-h2 {font-size: 1.5em; color: rgb(2,35,98)}
+body {font-family: Arial, sans-serif; background-color: rgb(245,245,255)}
+h1 {color: rgb(2,35,198)}
+h2 {color: rgb(2,35,198)}
+a {color: #cca300}
+.navbar-default .navbar-brand {font-size: 2em; color: rgb(2,35,198)}
+.panel-body {font-size: 0.9em}
