--- a/src/www/css/sass/override.scss
+++ b/src/www/css/sass/override.scss
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 
-body {font-family: Arial, sans-serif}
 h1, h2, .panel-heading, .navbar-nav, .navbar-brand {text-transform:lowercase}
 .navbar-brand {font-size: 2em}
 .panel-body {font-size: 0.9em}
+footer {font-size: 0.8em}
+
+@media (min-width: 1200px) {
+	.left-col {
+		padding-left: 0px;
+	}
+}
+
