Added Angular directive to get the themes menu highlighted correctly.

--- a/src/rails/app/views/layouts/_footer.html.erb
+++ b/src/rails/app/views/layouts/_footer.html.erb
@@ -43,8 +43,7 @@ This panel will appear on every page, briefly describing how the page has been i
 <script src="/js/site.min.js"></script>
 
 <script>
-Site.Menu.createThemeMenu();
-Site.Menu.highlightThemeMenu();
+Site.Menu.createThemesMenu();
 </script>
 
 <script>
