--- a/src/rails/app/views/layouts/_footer.html.erb
+++ b/src/rails/app/views/layouts/_footer.html.erb
@@ -37,7 +37,7 @@ This panel will appear on every page, briefly describing how the page has been i
 
 </div>
 
-<script src="http://code.jquery.com/jquery.js"></script>
+<%= javascript_include_tag "application" %>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
 <script src="/js/site.min.js"></script>
