First version of Demos app.

--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -31,20 +31,20 @@
 <nav class="navbar navbar-default" role="navigation">
 
 <div class="navbar-header">
+<a href="/"><p class="navbar-brand">bill-boyer.com</p></a>
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 <span class="sr-only">Toggle navigation</span>
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a href="/"><p class="navbar-brand">bill-boyer.com</p></a>
 </div>
 
 <div class="collapse navbar-collapse" id="navbar-collapse">
 <ul id="nav-ul" class="nav navbar-nav navbar-right">
 <li><a href="#" onclick="return false;">About Me</a></li>
 <li><a href="#" onclick="return false;">About This Site</a></li>
-<li><a href="#" onclick="return false;">Demos</a></li>
+<li><a href="/demos">Demos</a></li>
 </ul>
 </div>
 
