--- a/src/rails/app/views/demos/index.html.erb
+++ b/src/rails/app/views/demos/index.html.erb
@@ -1,1 +1,20 @@
-<h1>hi 2</h1>
+<h1>Demos</h1>
+
+<table width="100%">
+  <tr>
+    <th>Title</th>
+    <th>Desc</th>
+    <th>Img</th>
+    <th>Src</th>
+  </tr>
+ 
+  <% @demos.each do |demo| %>
+    <tr>
+      <td><%= demo.title %></td>
+      <td><%= demo.desc %></td>
+      <td><%= demo.img %></td>
+      <td><%= demo.src %></td>
+    </tr>
+  <% end %>
+</table>
+
