--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -20,7 +20,8 @@
 <link id="theme" type="text/css" rel="stylesheet" href="/css/themes/default/bootstrap.css" />
 
 <%= javascript_include_tag "/js/head.min.js" %>
-<%= stylesheet_link_tag "/css/override.css" %>
+<%= stylesheet_link_tag "/css/site.css" %>
+<%= stylesheet_link_tag "application" %>
 <%= csrf_meta_tags %>
 </head>
 
@@ -52,5 +53,4 @@
 </div>
 
 <div class="row">
-<div class="col-lg-9 col-lg-push-3">
-
+<div class="col-lg-9 col-lg-push-3 right-col">
