--- a/src/rails/app/assets/stylesheets/demos.css.scss
+++ b/src/rails/app/assets/stylesheets/demos.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the demos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.demo-thumbnail {width: 150px}
+.demo-detail {padding-bottom: 20px};
+.demo-detail-thumbnail {width: 75px; float: right}
+
+#demo-tab-content {overflow: hidden}
+
+#demo {
+  background-color: #f5f5f5;
+  border: 1px solid #dddddd;
+  padding: 5px;
+}
