--- a/src/rails/app/views/demos/new.html.erb
+++ b/src/rails/app/views/demos/new.html.erb
@@ -22,8 +22,13 @@
   </p>
  
   <p>
-    <%= f.label :desc %><br>
-    <%= f.text_area :desc %>
+    <%= f.label :short_desc %><br>
+    <%= f.text_area :short_desc %>
+  </p>
+ 
+  <p>
+    <%= f.label :long_desc %><br>
+    <%= f.text_area :long_desc %>
   </p>
  
   <p>
@@ -32,8 +37,8 @@
   </p>
  
   <p>
-    <%= f.label :src %><br>
-    <%= f.text_field :src %>
+    <%= f.label :script %><br>
+    <%= f.text_field :script %>
   </p>
  
   <p>
