--- a/src/rails/app/views/demos/show.html.erb
+++ b/src/rails/app/views/demos/show.html.erb
@@ -1,7 +1,27 @@
-  <p>
-    <%= @demo.url %><br>
-    <%= @demo.title %><br>
-    <%= @demo.desc %><br>
-    <%= @demo.img %><br>
-    <%= @demo.src %><br>
-  </p>
+<div class="demo-detail">
+  <h1><%= @demo.title %></h1>
+
+  <div class="bs-component">
+    <ul class="nav nav-tabs" style="margin-bottom: 15px;">
+      <li class="active"><a href="#description" data-toggle="tab">description</a></li>
+      <li><a href="#demo" data-toggle="tab">demo</a></li>
+    </ul>
+    <div id="demo-tab-content" class="tab-content">
+      <div class="tab-pane fade active in" id="description">
+        <div class="demo-detail-thumbnail">
+          <%= image_tag(@demo.img, :class => "demo-detail-thumbnail") %>
+        </div>
+      <p>
+        <%= raw @demo.long_desc %>
+      </p>
+      </div>
+      <div class="tab-pane fade" id="demo">
+        <script>
+          window.onload = function() {
+            <%= raw @demo.script %>
+          };
+        </script>
+      </div>
+    </div>
+  </div>
+</div>
