--- a/src/rails/app/views/demos/index.html.erb
+++ b/src/rails/app/views/demos/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do %>Demos<% end %>
+
 <h1>Demos</h1>
 
 <p>Cool demos of various tools and ideas.</p>
@@ -13,4 +15,3 @@
     </tr>
   <% end %>
 </table>
-
