--- a/src/rails/app/views/demos/new.html.erb
+++ b/src/rails/app/views/demos/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do %>New Demo<% end %>
+
 <%= form_for :demo, url: demos_path do |f| %>
 
   <% if @demo and @demo.errors.any? %>
