--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 
-<title>welcome | bill-boyer.com</title>
+<title><%= yield :title %> | bill-boyer.com</title>
 <meta name="description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
 <meta name="keywords" content="bill boyer software developer engineer architect leader manager nyc mtv nickelodeon comedy central viacom web app java javascript C++ SQL media video" />
 <link rel="icon" href="/img/favicon.png" type="image/png" />
