--- a/src/rails/app/views/welcome/index.html.erb
+++ b/src/rails/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do %>Welcome<% end %>
+
 <h1>Welcome</h1>
 
 <p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties.</p>
