--- a/src/rails/app/assets/stylesheets/demos.css.scss
+++ b/src/rails/app/assets/stylesheets/demos.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.demo-thumbnail {width: 150px}
+.demo-thumbnail {width: 120px}
 .demo-detail {padding-bottom: 20px};
 .demo-detail-thumbnail {width: 75px; float: right}
 
@@ -14,3 +14,5 @@
   border: 1px solid #dddddd;
   padding: 5px;
 }
+
+input {padding: 0px 5px}
