--- a/src/www/css/sass/site.scss
+++ b/src/www/css/sass/site.scss
@@ -1,17 +1,32 @@
 @charset "UTF-8";
 
-h1, h2, h3, h4, h5, .panel-heading, .navbar-nav, .navbar-brand {text-transform:lowercase}
-h1 {margin-top: 4px; margin-bottom: 16px}
-.navbar-brand {font-size: 2em;}
-.panel-body {font-size: 0.9em;}
-footer {font-size: 0.8em;}
+h1, h2, h3, h4, h5, .panel-heading, .navbar-nav, .navbar-brand {
+  text-transform: lowercase
+}
+
+h1 {
+  margin-top: 4px;
+  margin-bottom: 16px
+}
+
+.navbar-brand {
+  font-size: 2em;
+}
+
+.panel-body {
+  font-size: 0.9em;
+}
+
+footer {
+  font-size: 0.8em;
+}
 
 @media (min-width: 1200px) {
-	.left-col {
-		padding-left: 0px;
-	}
-	.right-col {
-		padding-right: 0px;
-	}
+  .left-col {
+	padding-left: 0px;
+  }
+  .right-col {
+	padding-right: 0px;
+  }
 }
 
