--- a/src/rails/app/views/layouts/_footer.html.erb
+++ b/src/rails/app/views/layouts/_footer.html.erb
@@ -15,10 +15,21 @@ This panel will appear on every page, briefly describing how the page has been i
 <div class="panel panel-default">
 <div class="panel-heading">Share</div>
 <div class="panel-body">
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-</div>  
+
+<div class="tweet-button">
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="wboyernick"></a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
+
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="240"
+  data-layout="button"
+  data-show-faces="true">
+</div>
+
+</div>
 </div>
 
 </div>
