--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
 <meta property="og:description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://www.bill-boyer.com" />
-<meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
+<meta property="og:image" content="http://www.bill-boyer.com/img/boyer-og-1910x1000.jpg" />
 
 <link id="theme" type="text/css" rel="stylesheet" href="/css/themes/cerulean/bootstrap.css" />
 
@@ -26,6 +26,23 @@
 </head>
 
 <body>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '784334068290045',
+      xfbml      : true,
+      version    : 'v2.1'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 <div class="container">
 
 <div class="row">
@@ -44,7 +61,7 @@
 <div class="collapse navbar-collapse" id="navbar-collapse">
 <ul id="nav-ul" class="nav navbar-nav navbar-right">
 <li><a href="#" onclick="return false;">About Me</a></li>
-<li><a href="#" onclick="return false;">About This Site</a></li>
+<li><a href="/about-this-site">About This Site</a></li>
 <li><a href="/demos">Demos</a></li>
 </ul>
 </div>
