--- a/src/www/css/sass/site.scss
+++ b/src/www/css/sass/site.scss
@@ -25,22 +25,26 @@ li {
   padding-bottom: 10px;
 }
 
+.dropdown-menu {
+  li {
+    padding-bottom: 0px;
+  }
+}
+
 footer {
   font-size: 0.8em;
 }
 
 .fb-like {
   float: left;
+  padding: 0px;
+  margin: 0px;
 }
 
 .tweet-button {
   float: left;
-  padding: 0 0 0 10px;
-}
-
-.g-plus {
-  float: left;
-  padding: 0 0 0 10px;
+  padding: 0px;
+  margin: 0px;
 }
 
 @media (min-width: 1200px) {
