New "about" pages.

--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -60,7 +60,7 @@
 
 <div class="collapse navbar-collapse" id="navbar-collapse">
 <ul id="nav-ul" class="nav navbar-nav navbar-right">
-<li><a href="#" onclick="return false;">About Me</a></li>
+<li><a href="/about-me">About Me</a></li>
 <li><a href="/about-this-site">About This Site</a></li>
 <li><a href="/demos">Demos</a></li>
 </ul>
