--- a/src/rails/app/views/welcome/index.html.erb
+++ b/src/rails/app/views/welcome/index.html.erb
@@ -2,17 +2,9 @@
 
 <h1>Welcome</h1>
 
-<p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties.</p>
+<p>I’m Bill Boyer, a software developer, architect, and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties, and since then I've been consulting.  More about me <a href="/about-me">here</a>.
 
-<p>Right now, I’m getting hands-on experience with new web technologies, informally consulting for a few friends, and working on a couple of side projects that interest me &#8212; one of which is this site, a testbed that I'll use to reinforce my understanding of new tools, platforms and best practices.</p>
+<p>I've also started developing this website, as a way of getting hands-on experience with new technologies. More detail <a href="/about-this-site">here</a>.</p>
 
-<p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs and other resources from all over the web.  I'll do my best to document everything here, and include links to the resources I've found helpful.</p>
-
-<h2>Profiles on Other Sites</h2>
-
-<ul>
-<li><a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn</a></li>
-<li><a href="https://plus.google.com/107831511220447646083?rel=author">Google+</a></li>
-<li><a href="https://www.facebook.com/william.boyer.nyc">Facebook</a></li>
-<li><a href="https://github.com/wboyer">GitHub</a></li>
-</ul>
+<h2>What's New?</h2>
+A very cool <a href="/demos/prioritized-queue">prioritized-queue</a>  demo!.
