Get rid of the "about this page" panel for now.

--- a/src/rails/app/views/layouts/_footer.html.erb
+++ b/src/rails/app/views/layouts/_footer.html.erb
@@ -3,16 +3,6 @@
 <div class="col-lg-3 col-lg-pull-9 left-col">
       
 <div class="panel panel-default">
-<div class="panel-heading">About This Page</div>
-<div class="panel-body">
-This panel will appear on every page, briefly describing how the page has been implemented.  The "more..." button will open an overlay with more detailed information. 
-<br/>
-<br/>
-<button id="page-info" type="button" class="btn btn-default" style="float: right" rel="popover" data-content="coming soon"><span class="glyphicon glyphicon-info-sign"></span> more...</button>
-</div>  
-</div>
-
-<div class="panel panel-default">
 <div class="panel-heading">Share</div>
 <div class="panel-body">
 
@@ -32,17 +22,15 @@ This panel will appear on every page, briefly describing how the page has been i
 </div>
 </div>
 
-</div>
-</div>
-
-<div class="row">
 <div class="panel panel-default">
+<div class="panel-heading">Credits</div>
 <div class="panel-body">
 <footer>
-<h5>Credits</h5>
 <p>Built with <a href="http://getbootstrap.com/">Bootstrap</a>. CSS themes from <a href="http://bootswatch.com/">Bootswatch</a>, by <a href="http://thomaspark.me">Thomas Park</a>.</p>
 </footer>
 </div>
+</div>
+
 </div>
 </div>
 
