--- a/src/rails/app/views/about_me/index.html.erb
+++ b/src/rails/app/views/about_me/index.html.erb
@@ -2,7 +2,29 @@
 
 <h1>About Me</h1>
 
-Blah.
+<p>
+I’m a developer, architect, and team leader based in NYC. I still love coding as much as ever, but I’ve built up good skills at product and business thinking too.
+</p>
+
+<p>
+Recently, I spent 13 years at Viacom, beginning as an individual contributor in the software-development team that builds and supports their sites and apps, and ending up leading that team.
+</p>
+
+<p>
+For the last year, I’ve worked as an independent consultant, doing a mix of advisory work and coding. I’ve also done a lot of development work on my own, gaining good experience with some of the latest tools and frameworks.
+</p>
+
+<p>
+Here's a conventional <a href="/img/boyer-resume.pdf">resume</a> as a PDF, generated from my <a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn profile</a>.
+</p>
+
+<p>
+Finally, here's a picture:
+</p>
+
+<p>
+<img src="/img/boyer-og-955x500.png" style="width: 75%">
+</p>
 
 <h2>Profiles on Other Sites</h2>
 
