--- a/src/rails/app/views/about_site/index.html.erb
+++ b/src/rails/app/views/about_site/index.html.erb
@@ -23,5 +23,5 @@ This is a Rails site, currently running on Passenger, with Apache in front and S
 </p>
 
 <p>
-The site is hosted on AWS and, in addition to the site itself, I've put a lot of effort into scripting the management of the AWS infrastructure, and evolving the <a href="/about-this-site/deployment-pipeline">build/deploy pipeline</a> I use to publish new releases.
+The site is hosted on AWS and, in addition to the site itself, I've put a lot of effort into scripting the management of the AWS infrastructure, and evolving the <a href="/about-this-site/deployment-pipeline">build/deploy pipeline</a> that I use to publish new releases.
 </p>
