--- a/src/rails/app/views/welcome/index.html.erb
+++ b/src/rails/app/views/welcome/index.html.erb
@@ -7,4 +7,4 @@
 <p>I've also started developing this website, as a way of getting hands-on experience with new technologies. More detail <a href="/about-this-site">here</a>.</p>
 
 <h2>What's New?</h2>
-A very cool <a href="/demos/prioritized-queue">prioritized-queue</a>  demo!.
+A very cool <a href="/demos/prioritized-queue">prioritized-queue</a>  demo!
