--- a/src/rails/app/views/deployment_pipeline/index.html.erb
+++ b/src/rails/app/views/deployment_pipeline/index.html.erb
@@ -28,7 +28,7 @@
 
 <ul>
 
-<li>My local machine, a Mac, runs my interactive development tools &#8212; git, emacs, Eclipse, Safari &#8212; and hosts the working trees for all my projects.  But that's all it does.</li>
+<li>My local machine, a Mac, runs my interactive development tools &#8212; git, Sublime Text, emacs, Eclipse, IntelliJ IDEA, Safari &#8212; and hosts the working trees for all my projects.  But that's all it does.</li>
 
 <li>Everything else runs inside an Ubuntu Linux VM, hosted by <a href="http://store.vmware.com/store/vmware/en_US/pd/productID.285051300">VMware Fusion for OS X</a> and managed by <a href="http://www.vagrantup.com">Vagrant</a>. Vagrant rsyncs source files from the OSX filesystem to the VM's.  Then Grunt, running inside the VM, compiles and copies them to the places they need to go for execution.</li>
 
