--- a/src/rails/app/views/demos/show.html.erb
+++ b/src/rails/app/views/demos/show.html.erb
@@ -10,8 +10,11 @@
     </ul>
     <div id="demo-tab-content" class="tab-content">
       <div class="tab-pane fade active in" id="description">
-        <div class="demo-detail-thumbnail">
-          <%= image_tag(@demo.img, :class => "demo-detail-thumbnail") %>
+        <div>
+          <%= image_tag(@demo.img + '.png', :class => "demo-detail-thumbnail") %>
+        </div>
+        <div>
+          <%= image_tag(@demo.img + '-p.png', :class => "demo-detail-thumbnail-p") %>
         </div>
         <%= raw @demo.long_desc %>
       </div>
