Page <meta> improvements.

--- a/src/rails/app/views/layouts/_header.html.erb
+++ b/src/rails/app/views/layouts/_header.html.erb
@@ -17,6 +17,8 @@
 <meta property="og:url" content="http://www.bill-boyer.com" />
 <meta property="og:image" content="http://www.bill-boyer.com/img/boyer-og-1910x1000.jpg" />
 
+<meta name="twitter:card" content="summary" />
+
 <link id="theme" type="text/css" rel="stylesheet" href="/css/themes/cerulean/bootstrap.css" />
 
 <%= javascript_include_tag "/js/head.min.js" %>
