More content edits.

--- a/src/rails/app/views/about_site/index.html.erb
+++ b/src/rails/app/views/about_site/index.html.erb
@@ -23,5 +23,13 @@ This is a Rails site, currently running on Passenger, with Apache in front and S
 </p>
 
 <p>
-The site is hosted on AWS and, in addition to the site itself, I've put a lot of effort into scripting the management of the AWS infrastructure, and evolving the <a href="/about-this-site/deployment-pipeline">build/deploy pipeline</a> that I use to publish new releases.
+The source code for the site overall is at <a href="https://github.com/wboyer/www-bill-boyer.com">www-bill-boyer.com</a> on Github, although individual <a href="/demos">demos</a> rely on code from other repos.
+</p>
+
+<p>
+The site is hosted on AWS, and in addition to coding the site itself, I've put a lot of effort into scripting the management of the AWS infrastructure, and developing an efficient <a href="/about-this-site/deployment-pipeline">build/deploy pipeline</a> for publishing new releases.
+</p>
+
+<p>
+<a href="https://github.com/wboyer/ops-bill-boyer.com">ops-bill-boyer.com</a> contains the bulk of this ops-related code.
 </p>
