--- a/src/rails/app/views/demos/index.html.erb
+++ b/src/rails/app/views/demos/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Demos</h1>
 
-<p>Cool demos of various tools and ideas.</p>
+<p>Working illustrations of various tools and ideas.</p>
 
 <table class="table table-striped">
   <% @demos.each do |demo| %>
