Added android-hls-video demo.

--- a/src/rails/app/views/demos/show.html.erb
+++ b/src/rails/app/views/demos/show.html.erb
@@ -5,8 +5,8 @@
 
   <div class="bs-component">
     <ul class="nav nav-tabs" style="margin-bottom: 15px;">
-      <li class="active"><a href="#description" data-toggle="tab">description</a></li>
-      <li><a href="#demo" data-toggle="tab">demo</a></li>
+      <li class="active"><a id="descriptionTab" href="#description" data-toggle="tab">description</a></li>
+      <li><a id="demoTab" href="#demo" data-toggle="tab">demo</a></li>
     </ul>
     <div id="demo-tab-content" class="tab-content">
       <div class="tab-pane fade active in" id="description">
