--- a/src/rails/app/views/about_me/index.html.erb
+++ b/src/rails/app/views/about_me/index.html.erb
@@ -11,7 +11,7 @@ Recently, I spent 13 years at Viacom, beginning as an individual contributor in 
 </p>
 
 <p>
-For the last year, I’ve worked as an independent consultant, doing a mix of advisory work and coding. I’ve also done a lot of development work on my own, gaining good experience with some of the latest tools and frameworks.
+Since then, I’ve worked as an independent consultant, doing a mix of advisory work and coding. I’ve also done a lot of development work on my own, gaining good experience with some of the latest tools and frameworks.
 </p>
 
 <p>
@@ -23,14 +23,13 @@ Finally, here's a picture:
 </p>
 
 <p>
-<img src="/img/boyer-og-955x500.png" style="width: 75%">
+<img src="/img/boyer-og-955x500.png" style="width: 60%">
 </p>
 
 <h2>Profiles on Other Sites</h2>
 
 <ul>
 <li><a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn</a></li>
-<li><a href="https://plus.google.com/107831511220447646083?rel=author">Google+</a></li>
 <li><a href="https://www.facebook.com/william.boyer.nyc">Facebook</a></li>
 <li><a href="https://github.com/wboyer">GitHub</a></li>
 </ul>
