--- a/src/rails/app/views/welcome/index.html.erb
+++ b/src/rails/app/views/welcome/index.html.erb
@@ -2,11 +2,18 @@
 
 <h1>Welcome</h1>
 
-<p>I’m Bill Boyer, a software developer, architect, and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties, and since then I've been consulting.  More about me <a href="/about-me">here</a>.
+<p>I'm Bill Boyer, a software developer, architect, and technical leader based in NYC. I'm an independent consultant doing both development and advisory work for a range of firms &#8211; currently an early-stage startup, a small digital agency, and a big media company.</p>
 
-<p>I've also started developing this website, as a way of getting hands-on experience with new technologies. More detail <a href="/about-this-site">here</a>.</p>
+<p>From 2000 through 2013, I worked at Viacom, eventually leading software development for their digital properties.<p>
+
+<p>You can find out more about me <a href="/about-me">here</a>.</p>
+
+<p>I've developed this site mainly as a sandbox in which I can teach myself, and then demonstrate, skills with various tools and methods of modern web development and hosting.  Although the implementation work and technical learning is the most important thing to me, it's also fun and educational being the site's sole product owner.</p>
+
+<p>There's more info about how the site is put together <a href="/about-this-site">here</a>.</p>
 
 <h2>What's New?</h2>
+
 <p>
-A very cool <a href="/demos/prioritized-queue">prioritized queue</a> demo!
+Cool <a href="/demos/android-hls-video">Android HLS Video</a> and <a href="/demos/unicode-utility">Unicode</a> demos!
 </p>
