Shrink demo portrait thumbnails on small devices.

--- a/src/rails/app/assets/stylesheets/demos.css.scss
+++ b/src/rails/app/assets/stylesheets/demos.css.scss
@@ -48,6 +48,12 @@
   }
 }
 
+@media (max-width: 479px) {
+  .demo-detail-thumbnail-p {
+    width: 180px;
+  }
+}
+
 #demo-tab-content {
   overflow: hidden
 }
